jazyk/SchemeLikeLParser.js
// Generated from SchemeLikeL.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from './antlr4/index.web.js';
import SchemeLikeLListener from './SchemeLikeLListener.js';
import SchemeLikeLVisitor from './SchemeLikeLVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class SchemeLikeLParser extends antlr4.Parser {

    static grammarFileName = "SchemeLikeL.g4";
    static literalNames = [ null, "'define'", "'lambda'", "'let*'", "'begin'", 
                            "'if'", "'set!'", "'vector'", "'list'", "'display'", 
                            "'export'", null, null, null, null, null, "'null?'", 
                            null, "'('", "')'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, "OPERATOR", "LOGOPERATOR", 
                             "BIOPERATOR", "LOGBIOPERATOR", "UNIOPERATOR", 
                             "LOGUNIOPERATOR", "VARIABLE", "PSTART", "PEND", 
                             "SPACE", "FLOAT", "INT", "NFLOAT", "NINT", 
                             "WS" ];
    static ruleNames = [ "start", "expr", "logExpr", "defineGlobalVar", 
                         "defineFnc", "fncBodyExpr", "localFncBodyExpr", 
                         "varPairExpr", "beginExpr", "biExpr", "logBiExpr", 
                         "uniExpr", "logUniExpr", "callFnc", "callLambdaFnc", 
                         "ifExpr", "operatorExpr", "logOperatorExpr", "biOperatorExpr", 
                         "logBiOperatorExpr", "uniOperatorExpr", "logUniOperatorExpr", 
                         "setExpr", "vectorExpr", "listExpr", "displayExpr", 
                         "exportExpr", "literal", "identifier" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = SchemeLikeLParser.ruleNames;
        this.literalNames = SchemeLikeLParser.literalNames;
        this.symbolicNames = SchemeLikeLParser.symbolicNames;
    }



	start() {
	    let localctx = new StartContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, SchemeLikeLParser.RULE_start);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 77; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 59;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	            if(la_===1) {
	                this.state = 58;
	                this.match(SchemeLikeLParser.SPACE);

	            }
	            this.state = 75;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 61;
	                this.expr();
	                break;

	            case 2:
	                this.state = 62;
	                this.defineGlobalVar();
	                break;

	            case 3:
	                this.state = 63;
	                this.defineFnc();
	                break;

	            case 4:
	                this.state = 64;
	                this.literal();
	                break;

	            case 5:
	                this.state = 65;
	                this.identifier();
	                break;

	            case 6:
	                this.state = 66;
	                this.callFnc();
	                break;

	            case 7:
	                this.state = 67;
	                this.setExpr();
	                break;

	            case 8:
	                this.state = 68;
	                this.listExpr();
	                break;

	            case 9:
	                this.state = 69;
	                this.vectorExpr();
	                break;

	            case 10:
	                this.state = 70;
	                this.displayExpr();
	                break;

	            case 11:
	                this.state = 71;
	                this.uniExpr();
	                break;

	            case 12:
	                this.state = 72;
	                this.exportExpr();
	                break;

	            case 13:
	                this.state = 73;
	                this.ifExpr();
	                break;

	            case 14:
	                this.state = 74;
	                this.beginExpr();
	                break;

	            }
	            this.state = 79; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 32899072) !== 0));
	        this.state = 81;
	        this.match(SchemeLikeLParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expr() {
	    let localctx = new ExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, SchemeLikeLParser.RULE_expr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 84;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 83;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 86;
	        this.match(SchemeLikeLParser.PSTART);
	        this.state = 88;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 87;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 90;
	        this.operatorExpr();
	        this.state = 103; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 103;
	        		this._errHandler.sync(this);
	        		var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        		switch(la_) {
	        		case 1:
	        		    this.state = 91;
	        		    this.biExpr();
	        		    break;

	        		case 2:
	        		    this.state = 92;
	        		    this.expr();
	        		    break;

	        		case 3:
	        		    this.state = 93;
	        		    this.match(SchemeLikeLParser.SPACE);
	        		    this.state = 94;
	        		    this.literal();
	        		    break;

	        		case 4:
	        		    this.state = 95;
	        		    this.match(SchemeLikeLParser.SPACE);
	        		    this.state = 96;
	        		    this.identifier();
	        		    break;

	        		case 5:
	        		    this.state = 97;
	        		    this.callFnc();
	        		    break;

	        		case 6:
	        		    this.state = 98;
	        		    this.uniExpr();
	        		    break;

	        		case 7:
	        		    this.state = 99;
	        		    this.beginExpr();
	        		    break;

	        		case 8:
	        		    this.state = 100;
	        		    this.ifExpr();
	        		    break;

	        		case 9:
	        		    this.state = 101;
	        		    this.vectorExpr();
	        		    break;

	        		case 10:
	        		    this.state = 102;
	        		    this.listExpr();
	        		    break;

	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 105; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,6, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 108;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 107;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 110;
	        this.match(SchemeLikeLParser.PEND);
	        this.state = 112;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
	        if(la_===1) {
	            this.state = 111;
	            this.match(SchemeLikeLParser.SPACE);

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	logExpr() {
	    let localctx = new LogExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, SchemeLikeLParser.RULE_logExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 115;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 114;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 117;
	        this.match(SchemeLikeLParser.PSTART);
	        this.state = 119;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 118;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 121;
	        this.logOperatorExpr();
	        this.state = 124; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 124;
	        		this._errHandler.sync(this);
	        		var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	        		switch(la_) {
	        		case 1:
	        		    this.state = 122;
	        		    this.logUniExpr();
	        		    break;

	        		case 2:
	        		    this.state = 123;
	        		    this.logBiExpr();
	        		    break;

	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 126; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,12, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 129;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 128;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 131;
	        this.match(SchemeLikeLParser.PEND);
	        this.state = 133;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,14,this._ctx);
	        if(la_===1) {
	            this.state = 132;
	            this.match(SchemeLikeLParser.SPACE);

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	defineGlobalVar() {
	    let localctx = new DefineGlobalVarContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, SchemeLikeLParser.RULE_defineGlobalVar);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 136;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 135;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 138;
	        this.match(SchemeLikeLParser.PSTART);
	        this.state = 140;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 139;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 142;
	        this.match(SchemeLikeLParser.T__0);
	        this.state = 143;
	        this.match(SchemeLikeLParser.SPACE);
	        this.state = 144;
	        this.identifier();
	        this.state = 155;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 145;
	            this.match(SchemeLikeLParser.SPACE);
	            this.state = 146;
	            this.identifier();
	            break;

	        case 2:
	            this.state = 147;
	            this.match(SchemeLikeLParser.SPACE);
	            this.state = 148;
	            this.literal();
	            break;

	        case 3:
	            this.state = 149;
	            this.expr();
	            break;

	        case 4:
	            this.state = 150;
	            this.callFnc();
	            break;

	        case 5:
	            this.state = 151;
	            this.vectorExpr();
	            break;

	        case 6:
	            this.state = 152;
	            this.listExpr();
	            break;

	        case 7:
	            this.state = 153;
	            this.uniExpr();
	            break;

	        case 8:
	            this.state = 154;
	            this.biExpr();
	            break;

	        }
	        this.state = 158;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 157;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 160;
	        this.match(SchemeLikeLParser.PEND);
	        this.state = 162;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,19,this._ctx);
	        if(la_===1) {
	            this.state = 161;
	            this.match(SchemeLikeLParser.SPACE);

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	defineFnc() {
	    let localctx = new DefineFncContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, SchemeLikeLParser.RULE_defineFnc);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 165;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 164;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 167;
	        this.match(SchemeLikeLParser.PSTART);
	        this.state = 169;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 168;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 171;
	        this.match(SchemeLikeLParser.T__0);
	        this.state = 173;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 172;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 234;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 18:
	            this.state = 175;
	            this.match(SchemeLikeLParser.PSTART);
	            this.state = 177;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===20) {
	                this.state = 176;
	                this.match(SchemeLikeLParser.SPACE);
	            }

	            this.state = 179;
	            this.identifier();
	            this.state = 184;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,24,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 180;
	                    this.match(SchemeLikeLParser.SPACE);
	                    this.state = 181;
	                    this.identifier(); 
	                }
	                this.state = 186;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,24,this._ctx);
	            }

	            this.state = 188;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===20) {
	                this.state = 187;
	                this.match(SchemeLikeLParser.SPACE);
	            }

	            this.state = 190;
	            this.match(SchemeLikeLParser.PEND);
	            this.state = 193;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,26,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 191;
	                this.fncBodyExpr();
	                break;

	            case 2:
	                this.state = 192;
	                this.localFncBodyExpr();
	                break;

	            }
	            this.state = 195;
	            this.match(SchemeLikeLParser.PEND);
	            break;
	        case 17:
	            this.state = 197;
	            this.identifier();
	            this.state = 199;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===20) {
	                this.state = 198;
	                this.match(SchemeLikeLParser.SPACE);
	            }

	            this.state = 201;
	            this.match(SchemeLikeLParser.PSTART);
	            this.state = 203;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===20) {
	                this.state = 202;
	                this.match(SchemeLikeLParser.SPACE);
	            }

	            this.state = 205;
	            this.match(SchemeLikeLParser.T__1);
	            this.state = 207;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===20) {
	                this.state = 206;
	                this.match(SchemeLikeLParser.SPACE);
	            }

	            this.state = 209;
	            this.match(SchemeLikeLParser.PSTART);
	            this.state = 211;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,30,this._ctx);
	            if(la_===1) {
	                this.state = 210;
	                this.match(SchemeLikeLParser.SPACE);

	            }
	            this.state = 214;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===17) {
	                this.state = 213;
	                this.identifier();
	            }

	            this.state = 220;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,32,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 216;
	                    this.match(SchemeLikeLParser.SPACE);
	                    this.state = 217;
	                    this.identifier(); 
	                }
	                this.state = 222;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,32,this._ctx);
	            }

	            this.state = 224;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===20) {
	                this.state = 223;
	                this.match(SchemeLikeLParser.SPACE);
	            }

	            this.state = 226;
	            this.match(SchemeLikeLParser.PEND);
	            this.state = 228;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,34,this._ctx);
	            if(la_===1) {
	                this.state = 227;
	                this.match(SchemeLikeLParser.SPACE);

	            }
	            this.state = 230;
	            this.fncBodyExpr();
	            this.state = 231;
	            this.match(SchemeLikeLParser.PEND);
	            this.state = 232;
	            this.match(SchemeLikeLParser.PEND);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fncBodyExpr() {
	    let localctx = new FncBodyExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, SchemeLikeLParser.RULE_fncBodyExpr);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 237;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,36,this._ctx);
	        if(la_===1) {
	            this.state = 236;
	            this.match(SchemeLikeLParser.SPACE);

	        }
	        this.state = 255;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,38,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 253;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,37,this._ctx);
	                switch(la_) {
	                case 1:
	                    this.state = 239;
	                    this.expr();
	                    break;

	                case 2:
	                    this.state = 240;
	                    this.biExpr();
	                    break;

	                case 3:
	                    this.state = 241;
	                    this.uniExpr();
	                    break;

	                case 4:
	                    this.state = 242;
	                    this.match(SchemeLikeLParser.SPACE);
	                    this.state = 243;
	                    this.literal();
	                    break;

	                case 5:
	                    this.state = 244;
	                    this.match(SchemeLikeLParser.SPACE);
	                    this.state = 245;
	                    this.identifier();
	                    break;

	                case 6:
	                    this.state = 246;
	                    this.callFnc();
	                    break;

	                case 7:
	                    this.state = 247;
	                    this.ifExpr();
	                    break;

	                case 8:
	                    this.state = 248;
	                    this.setExpr();
	                    break;

	                case 9:
	                    this.state = 249;
	                    this.listExpr();
	                    break;

	                case 10:
	                    this.state = 250;
	                    this.displayExpr();
	                    break;

	                case 11:
	                    this.state = 251;
	                    this.vectorExpr();
	                    break;

	                case 12:
	                    this.state = 252;
	                    this.beginExpr();
	                    break;

	                } 
	            }
	            this.state = 257;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,38,this._ctx);
	        }

	        this.state = 259;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,39,this._ctx);
	        if(la_===1) {
	            this.state = 258;
	            this.match(SchemeLikeLParser.SPACE);

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	localFncBodyExpr() {
	    let localctx = new LocalFncBodyExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, SchemeLikeLParser.RULE_localFncBodyExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 262;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 261;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 264;
	        this.match(SchemeLikeLParser.PSTART);
	        this.state = 266;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 265;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 268;
	        this.match(SchemeLikeLParser.T__2);
	        this.state = 270;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 269;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 272;
	        this.match(SchemeLikeLParser.PSTART);
	        this.state = 274;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 273;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 285;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===18) {
	            this.state = 276;
	            this.match(SchemeLikeLParser.PSTART);
	            this.state = 277;
	            this.varPairExpr();
	            this.state = 278;
	            this.match(SchemeLikeLParser.PEND);
	            this.state = 281;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===20) {
	                this.state = 280;
	                this.match(SchemeLikeLParser.SPACE);
	            }

	            this.state = 287;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 288;
	        this.match(SchemeLikeLParser.PEND);
	        this.state = 290;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,46,this._ctx);
	        if(la_===1) {
	            this.state = 289;
	            this.match(SchemeLikeLParser.SPACE);

	        }
	        this.state = 292;
	        this.fncBodyExpr();
	        this.state = 294;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 293;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 296;
	        this.match(SchemeLikeLParser.PEND);
	        this.state = 298;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 297;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	varPairExpr() {
	    let localctx = new VarPairExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, SchemeLikeLParser.RULE_varPairExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 301;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 300;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 303;
	        this.identifier();
	        this.state = 314;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,50,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 304;
	            this.expr();
	            break;

	        case 2:
	            this.state = 305;
	            this.match(SchemeLikeLParser.SPACE);
	            this.state = 306;
	            this.literal();
	            break;

	        case 3:
	            this.state = 307;
	            this.match(SchemeLikeLParser.SPACE);
	            this.state = 308;
	            this.identifier();
	            break;

	        case 4:
	            this.state = 309;
	            this.callFnc();
	            break;

	        case 5:
	            this.state = 310;
	            this.vectorExpr();
	            break;

	        case 6:
	            this.state = 311;
	            this.listExpr();
	            break;

	        case 7:
	            this.state = 312;
	            this.uniExpr();
	            break;

	        case 8:
	            this.state = 313;
	            this.biExpr();
	            break;

	        }
	        this.state = 317;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,51,this._ctx);
	        if(la_===1) {
	            this.state = 316;
	            this.match(SchemeLikeLParser.SPACE);

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	beginExpr() {
	    let localctx = new BeginExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, SchemeLikeLParser.RULE_beginExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 320;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 319;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 322;
	        this.match(SchemeLikeLParser.PSTART);
	        this.state = 324;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 323;
	            this.match(SchemeLikeLParser.SPACE);
	        }

	        this.state = 326;
	        this.match(SchemeLikeLParser.T__3);
	        this.state = 342;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,55,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 340;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,54,this._ctx);
	                switch(la_) {
	                case 1:
	                    this.state = 327;
	                    this.expr();
	                    break;

	                case 2:
	                    this.state = 328;
	                    this.match(SchemeLikeLParser.SPACE);
	                    this.state = 329;
	                    this.literal();
	                    break;

	                case 3:
	                    this.state = 330;
	                    this.match(SchemeLikeLParser.SPACE);
	                    this.state = 331;
	                    this.identifier();
	                    break;

	                case 4:
	                    this.state = 332;
	                    this.callFnc();
	                    break;

	                case 5:
	                    this.state = 333;
	                    this.setExpr();
	                    break;

	                case 6:
	                    this.state = 334;
	                    this.displayExpr();
	                    break;

	                case 7:
	                    this.state = 335;
	                    this.ifExpr();
	                    break;

	                case 8:
	                    this.state = 336;
	                    this.vectorExpr();
	                    break;

	                case 9:
	                    this.state = 337;
	                    this.listExpr();
	                    break;

	                case 10:
	                    this.state = 338;
	                    this.uniExpr();
	                    break;

	                case 11:
	                    this.state = 339;
	                    this.biExpr();
	                    break;

	                } 
	            }
	            this.state = 344;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,55,this._ctx);
	        }

	        this.state = 346;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 345;
	            this.match(SchemeLikeLParser.SPACE);
	        }
